--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
     "gatsby-plugin-react-helmet": "^3.1.24",
     "gatsby-plugin-sharp": "^2.4.13",
     "gatsby-source-filesystem": "^2.1.56",
+    "gatsby-source-rss-feed": "^1.1.1",
+    "gatsby-source-soundcloud": "^2.0.6",
     "gatsby-transformer-sharp": "^2.3.19",
+    "moment": "^2.24.0",
+    "moment-duration-format": "^2.3.2",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-cookie": "^4.0.3",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1"
   },
