--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gatsby": "^2.19.45",
     "gatsby-image": "^2.2.44",
     "gatsby-plugin-manifest": "^2.2.48",
+    "gatsby-plugin-netlify-cms": "^4.2.1",
     "gatsby-plugin-offline": "^3.0.41",
     "gatsby-plugin-react-helmet": "^3.1.24",
     "gatsby-plugin-sharp": "^2.4.13",
@@ -17,6 +18,7 @@
     "gatsby-transformer-sharp": "^2.3.19",
     "moment": "^2.24.0",
     "moment-duration-format": "^2.3.2",
+    "netlify-cms-app": "^2.11.32",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-cookie": "^4.0.3",
