--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "gatsby-plugin-offline": "^3.0.41",
     "gatsby-plugin-react-helmet": "^3.1.24",
     "gatsby-plugin-sharp": "^2.4.13",
+    "gatsby-remark-images": "^3.2.1",
+    "gatsby-remark-relative-images": "^0.3.0",
     "gatsby-source-filesystem": "^2.1.56",
     "gatsby-source-rss-feed": "^1.1.1",
     "gatsby-source-soundcloud": "^2.0.6",
+    "gatsby-transformer-remark": "^2.7.1",
     "gatsby-transformer-sharp": "^2.3.19",
     "moment": "^2.24.0",
     "moment-duration-format": "^2.3.2",
