--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -17,7 +17,7 @@ collections:
       - {
           label: "Template Key",
           name: "templateKey",
-          widget: "hidden",
+          widget: "string",
           default: "blog-post",
         }
       - { label: "Title", name: "title", widget: "string" }
