--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -24,3 +24,15 @@ collections:
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Description", name: "description", widget: "string" }
       - { label: "Body", name: "body", widget: "markdown" }
+  - name: "creator"
+    label: "Creator"
+    folder: "content/creators"
+    create: true
+    slug: "{{slug}}"
+    editor:
+      preview: false
+    fields:
+      - { label: "Name", name: "name", widget: "string" }
+      - { label: "Description", name: "description", widget: "string" }
+      - { label: "Name", name: "name", widget: "string" }
+      - { label: "Profile Picture", name: "profilePicture", widget: "image" }
