--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -36,3 +36,9 @@ collections:
       - { label: "Description", name: "description", widget: "string" }
       - { label: "Name", name: "name", widget: "string" }
       - { label: "Profile Picture", name: "profilePicture", widget: "image" }
+      - {
+          label: "Template Key",
+          name: "templateKey",
+          widget: "string",
+          default: "blog-post",
+        }
