--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -42,3 +42,18 @@ collections:
           default: "blog-post",
         }
       - { label: "Key", name: "key", widget: "string", default: "creators" }
+  - name: "pages"
+    label: "Pages"
+    files:
+      - file: "src/pages/about.md"
+        label: "About"
+        name: "about"
+        fields:
+          - {
+              label: "Template Key",
+              name: "templateKey",
+              widget: "string",
+              default: "about-page",
+            }
+          - { label: "Title", name: "title", widget: "string" }
+          - { label: "Body", name: "body", widget: "markdown" }
