--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -17,7 +17,7 @@ collections:
       - {
           label: "Template Key",
           name: "templateKey",
-          widget: "string",
+          widget: "hidden",
           default: "blog-post",
         }
       - { label: "Title", name: "title", widget: "string" }
@@ -38,10 +38,10 @@ collections:
       - {
           label: "Template Key",
           name: "templateKey",
-          widget: "string",
+          widget: "hidden",
           default: "blog-post",
         }
-      - { label: "Key", name: "key", widget: "string", default: "creators" }
+      - { label: "Key", name: "key", widget: "hidden", default: "creators" }
   - name: "pages"
     label: "Pages"
     files:
@@ -52,7 +52,7 @@ collections:
           - {
               label: "Template Key",
               name: "templateKey",
-              widget: "string",
+              widget: "hidden",
               default: "about-page",
             }
           - { label: "Title", name: "title", widget: "string" }
