--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby-plugin-sharp": "^2.4.13",
     "gatsby-remark-images": "^3.2.1",
     "gatsby-remark-relative-images": "^0.3.0",
+    "gatsby-remark-responsive-iframe": "^2.3.1",
     "gatsby-source-filesystem": "^2.1.56",
     "gatsby-source-rss-feed": "^1.1.1",
     "gatsby-source-soundcloud": "^2.0.6",
