--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react": "^16.12.0",
     "react-cookie": "^4.0.3",
     "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "react-media": "^1.10.0"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
