--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "comic-box-rumble",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "Comic box rumble podcast site",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "comic box",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "classnames": "^2.2.6",
     "gatsby": "^2.19.45",
     "gatsby-image": "^2.2.44",
     "gatsby-plugin-manifest": "^2.2.48",
